Fixed horizontal scrolling issue on mobile.

--- a/src/styles/sections/_contact.scss
+++ b/src/styles/sections/_contact.scss
@@ -1,7 +1,8 @@
 section.contact {
   position: relative;
   padding-bottom: 15rem;
-	background-color: $white;
+  background-color: $white;
+  overflow-x: hidden;
 
   #clouds {
     background-color: $primary-blue;
